@@ -2,3 +2,6 @@
 
 #include "../icmconf"
 
+#undef CXXFLAGS
+#define CXXFLAGS            "--std=c++14 " ${THREAD} " -isystem " \
+                            "/home/frank/git/bobcat/src/bobcat/tmp -Wall -O2"
