@@ -1,3 +1,11 @@
+bobcat (4.03.00) WIP
+
+  * Prepared all classes depending on the OpenSSL libraries for OpenSSL1.1.0
+    Note that the new library requires linking to the crypto library as well
+    (refer to the man-pages for details)
+
+-----------------------------------------------
+    
 bobcat (4.02.00)
 
   * Added the member template 
